English Dolibarr ChangeLog

***** ChangeLog for 2.9 compared to 2.8 *****

For users:
- New: Add statistics on trips and expenses module.
- New: Can reopen a closed customer order.
- New: Add module externalsite to add a web site/tools inside 
       menu and a Dolibarr frame.
- New: Can link trips and fees to a project.
- New: Add civility title in foundation module.
- New: Can set accountancy code for product (buy and sell).
- New: Can filter third parties lists on categories.
- New: Can filter products and services lists on categories.
- New: Can use categories for members.
- New: Can build documents for third parties (Use ODT templates, need PHP 5.2+). 
- New: Support products property length and area.
- New: Add "payment due before" field in invoice exports
- New: Add feature to resize or crop image files (for products photos)
- New: task #10113 : Show list of emailing on clicking on "number of mass emailing received"
- New: Add default language for third parties and use it when multilang is enabled
       to define default language for document generation.
- New: Can reopen a closed supplier invoice.
- New: Move permission "see hidden categories" into "see hidden products/services".
- Fix: Format number was wrong for ar_AR language.
- Fix: Can change password if has only permission change password.
- Fix: Project PDF document show the tasks.
- Fix: bug #29278 : SMTP fails with IP
- Fix: Default language on login page.

For developers:
- More comments in code.
- Uniformize some code. 
- First delete of useless pre.inc.php files.
- Fix W3C errors in page forging.
- Qual: Mutualize code of menu managers.


***** ChangeLog for 2.8.1 compared to 2.8 *****
For users:
- Fix: Works on database with _ in name.
- Fix: Broken feature in trips and expense module.
- Fix: Can use $ in database and login/pass values.
- Fix: No error on upgrade if there is orphelins tasks.
- Fix: Failed to login when user agent string was longer than 128.